force-app/main/default/objects/Inventory_Transfer_Order_Line__c/fields/Quantity_Sent__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Sent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Qty Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>